--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # For PCBs designed using KiCad: http://www.kicad-pcb.org/
 # Format documentation: http://kicad-pcb.org/help/file-formats/
 
+#build
+build/
 # Temporary files
 *.000
 *.bak
@@ -25,4 +27,3 @@ fp-info-cache
 
 # Exported BOM files
 *.xml
-*.csv
